pipeline/faults/api-gateway-delay.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-gateway-delay
  namespace: hydragen
spec:
  hosts:
  - api-gateway
  http:
  - fault:
      delay:
        percentage:
          value: 100.0
        fixedDelay: 3s
    route:
    - destination:
        host: api-gateway
