pipeline/faults/si-delay.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: si-delay
  namespace: hydragen
spec:
  hosts:
  - si
  http: # Istio HTTPRoute also handles gRPC/HTTP2 traffic
  - fault:
      delay:
        percentage:
          value: 100.0
        fixedDelay: 3s
    route:
    - destination:
        host: si
